--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -1,3 +1,29 @@
+.follow-us {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2px;
+}
+
+.follow-us-text {
+    font-size: 16px;
+    color: black;
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+}
+
+.insta-logo {
+    width: 22px;
+}
+
+.instagram {
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
 .logo-if {
     width: 64px;
 }
