--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -1,27 +1,31 @@
 .follow-us {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2px;
+    margin-left: 20px;
+    gap: 5px;
 }
 
 .follow-us-text {
-    font-size: 16px;
+    font-size: 20px;
     color: black;
     font-family: "Inter", sans-serif;
-    font-weight: 600;
+    font-weight: 700;
+    letter-spacing: 4px;
 }
 
-.insta-logo {
+.club-description {
+    font-family: "Inter", sans-serif;
+}
+
+.insta-logo, .email {
     width: 22px;
 }
 
-.instagram {
+.instagram, .email {
     display: flex;
-    gap: 5px;
-    justify-content: center;
     align-items: center;
+    font-size: 14px;
+    gap: 5px;
 }
 
 .logo-if {
