--- a/src/assets/styles/how-we-work.css
+++ b/src/assets/styles/how-we-work.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     gap: 10px;
     margin: 10px;
+    
 }
 
 .how-we-work-title, .how-we-work-description {
@@ -25,4 +26,11 @@
     font-size: 20px;
     font-weight: 400;
 
+}
+
+@media only screen and (min-width: 1280px) {
+    .how-we-work {
+        width: 35%;
+        padding: 20px;
+    }
 }
