--- a/src/assets/styles/next-meeting.css
+++ b/src/assets/styles/next-meeting.css
@@ -1,5 +1,6 @@
 .next-meeting {
     background-color: black;
+    
 }
 
 .content-next-meeting {
@@ -25,4 +26,11 @@
     font-size: 20px;
     font-weight: 400;
 
+}
+
+@media only screen and (min-width: 1280px) {
+    .next-meeting {
+        width: 35%;
+        padding: 20px;
+    }
 }
