--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -15,9 +15,13 @@
 @media only screen and (min-width: 1280px) {
     .navbar-item {
         font-family: "Inter", sans-serif;
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 700;
         color: black;
+    }
+
+    .navbar-item:hover {
+        background-color: transparent;
     }
 
     .navbar-start {
