--- a/src/assets/styles/movie.css
+++ b/src/assets/styles/movie.css
@@ -44,6 +44,10 @@
     text-align: center;
 }
 
+.movieBoxInstruction {
+    display: none;
+}
+
 @media only screen and (min-width: 1280px) {
     .movie {
         display: flex;
@@ -60,7 +64,7 @@
 
     .movieCardBox {
         width: 90%;
-        height: 90%;
+        height: 90vh;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -69,14 +73,15 @@
     }
 
     .movieCard{
-        width: 85%;
-        height: 85%;
+        width: 100%;
+        height: 100%;
         background-color: white;
         border-radius: 25px;
         display: flex;
         flex-direction: row;
         color: black;
         justify-content: space-between;
+        align-items: center;
         transition: .1s ease;
         position: relative;
         user-select: none;
@@ -130,7 +135,10 @@
     }
 
     .movieBoxInstruction {
+        display: flex;
         position: absolute;
+        align-items: center;
+        justify-content: center;
         bottom: 25px;
         right: 0;
         transform: translate(-100%);
@@ -149,7 +157,7 @@
     }
 
     .movieCard:hover .imgMovieBox{
-        height: 80vh;
+        height: 100%;
         width: 50%;
         transition-delay: 0s;
     }
@@ -157,7 +165,6 @@
     .movieCard:hover .infoMovie{
         opacity: 1;
         transition-delay: .2s;
-
         width: 50%;
         margin: 0;
         gap: 2px;
