--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -4,22 +4,19 @@
     
 }
 
-.image-cover-mobile {
+.image-cover {
     width: 100vw;
     height: 50vh;
-}
-
-.image-cover-desktop {
-    display: none;
 }
 
 .content-welcome {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    padding: 5px;
+    gap: 15px;
     height: 50vh;
-    gap: 30px;
 }
 
 .welcome-text {
@@ -35,30 +32,22 @@
         flex-direction: column;
     }
 
-    .image-cover-mobile {
-        display: none;
-    }
-
-    .image-cover-desktop {
+    .image-cover {
         display: flex;
         width: 100vw;
+        height: 100%;
     }
 
     .content-welcome {
         position: absolute;
-        bottom: 10%;
-        right: 55%;
+        bottom: 0%;
+        right: 50vw;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
+
+        width: 650px;
         
     }
-    
-    .welcome-text {
-        margin: 0 100px;
-        margin-bottom: 0;
-    }
-
-
     
 }
